--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -31,16 +31,19 @@ body {
 	padding: 50px 0;
 
 	.card {
+		display: flex;
+		flex-direction: column;
+		justify-content: space-evenly;
+		padding: 15px;
 		width: 80%;
-		height: 40vw;
+		height: 80vh;
 		max-height: 500px;
 		max-width: 1100px;
 		border: 1px solid black;
+		position: relative;
 	}
 
 	.card__one {
 		margin-bottom: 20px;
 	}
-
-
 }
