--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -18,32 +18,60 @@ body {
 	margin-right: auto;
 	padding: 0 10px;
 	display: flex;
+	align-items: center;
+	justify-content: center;
 	height: 100%;
 	width: 100%;
 }
 
-.card__container {
+.card {
+	height: 80vh;
+	width: 90%;
+	box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 	display: flex;
 	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	width: 100%;
-	padding: 50px 0;
+	justify-content: space-between;
+	background-color: $darkColor;
+	color: $primaryColor;
+	border-radius: 15px;
+	padding: 25px;
 
-	.card {
-		display: flex;
-		flex-direction: column;
-		justify-content: space-evenly;
-		padding: 15px;
-		width: 80%;
-		height: 80vh;
-		max-height: 500px;
-		max-width: 1100px;
-		border: 1px solid black;
-		position: relative;
+	&__title {
+		font-size: 55px;
+		padding: 10px;
+		text-align: center;
+		line-height: 60px;
+		font-family: 'Oswald', sans-serif;
+		letter-spacing: 1px;
+		background-image: linear-gradient(
+			to right,
+			#462523 0,
+			#cb9b51 22%,
+			#f6e27a 45%,
+			#d9d167 50%,
+			#f6e27a 55%,
+			#cb9b51 78%,
+			#462523 100%
+		);
+		color: transparent;
+		background-clip: text;
 	}
 
-	.card__one {
-		margin-bottom: 20px;
+	&__text {
+		font-family: 'Montserrat', sans-serif;
+		font-size: 14px;
+		text-align: justify;
+	}
+
+	&__company-data {
+		font-family: 'Montserrat', sans-serif;
+		text-align: right;
+		font-size: 14px;
+		font-weight: 300;
+
+		a {
+			color: $primaryColor;
+			text-decoration: none;
+		}
 	}
 }
